# algurulgar

./: .gitignore  Cargo.toml
assets/: bunny.mtl
engine/: Cargo.toml
engine/shaders/: mesh.frag  mesh.vert  mesh_frag.glsl  mesh_vert.glsl  pbr.frag  pbr.vert  quad.frag  text.frag  text_frag.glsl  text_vert.glsl  vert.glsl
engine/src/: app.rs  lib.rs  macros.rs  update.rs  window.rs
engine/src/debug/: mod.rs
engine/src/debug/widgets/: mod.rs
engine/src/egui_layer/: mod.rs
engine/src/engine/: fps.rs  layer.rs  mod.rs
engine/src/engine/component/: mod.rs
engine/src/engine/events/: mod.rs
engine/src/engine/input/: keyboard.rs  mod.rs  mouse.rs
engine/src/math/: mod.rs
engine/src/math/color/: mod.rs
engine/src/mesh/: obj.rs
engine/src/render/: mod.rs
engine/src/render/camera/: mod.rs  ortho.rs
engine/src/render/renderer/: mesh.rs  mod.rs  quad.rs  text.rs
engine/src/render/renderer/text/: mod.rs
engine/src/render/renderer2d/: mod.rs  quad.rs
engine/src/render/renderer2d/text/: font.rs  mod.rs
engine/src/render/shader/: mod.rs
engine/src/render/text/: batch.rs  font.rs  mod.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
