[workspace]
resolver = "2"
members = ["engine", "sandbox", "egui_glium"]

[workspace.dependencies]
algurulgar = { path = "engine" }
anyhow = "1"
atomic_float = "1.0.0"
bdf = { git = "https://github.com/fooooooooooooooo/rust-bdf", version = "0.7.0" }
egui_glium = { path = "egui_glium" }
log = "0.4"
nalgebra = "0.33.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
raw-window-handle = "0.6.2"
thiserror = "1"
tobj = "4.0.2"
winit = "0.30.3"

# until https://github.com/glium/glium/pull/2113 merged
[workspace.dependencies.glium]
git = "https://github.com/est31/glium.git"
branch = "glutin-0.32"

# until https://github.com/emilk/egui/pull/4466 merged
[workspace.dependencies.egui]
git = "https://github.com/AndriBaal/egui.git"
branch = "winit-0.30"

# until https://github.com/emilk/egui/pull/4466 merged
[workspace.dependencies.egui-winit]
git = "https://github.com/AndriBaal/egui.git"
branch = "winit-0.30"

# until pub mod event_loop
[workspace.dependencies.glutin]
git = "https://github.com/fooooooooooooooo/glutin.git"

# until pub mod event_loop
[workspace.dependencies.glutin-winit]
git = "https://github.com/fooooooooooooooo/glutin.git"

[patch.crates-io]
glutin = { git = "https://github.com/fooooooooooooooo/glutin.git" }
glium = { git = "https://github.com/est31/glium.git", branch = "glutin-0.32" }
