[package]
name = "algurulgar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
atomic_float.workspace = true
glium.workspace = true
glutin.workspace = true
glutin-winit.workspace = true
nalgebra.workspace = true
rand.workspace = true
raw-window-handle.workspace = true
winit.workspace = true
log.workspace = true
thiserror.workspace = true
tobj.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui_glium.workspace = true
bdf.workspace = true
pretty_env_logger.workspace = true
